# be-rust

./: Cargo.toml
src/: main.rs
templates/: index.html.hbs
